Fixed adding members to list

--- a/roster.html
+++ b/roster.html
@@ -11,8 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <input class="name" type="text">
-        <button>Add</button>
+        <form>
+            <input class="name" type="text">
+            <button type="submit">Add</button>
+        </form>
         <ul></ul>
         <script src="roster.js"></script>
     </body>
