--- a/roster.html
+++ b/roster.html
@@ -9,6 +9,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="roster.css">
     </head>
     <body>
         <form>
