--- a/roster.html
+++ b/roster.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="roster.css">
     </head>
     <body>
+        <h1>MegaRoster</h1>
         <form>
             <input class="name" type="text">
             <button type="submit">Add</button>
